--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 /* ======================== */
 
 
+
 .loader{
   width:100%;
   height:100%;
@@ -54,7 +55,11 @@
 /* ===== Main Page ===== */
 /* ===================== */
 
+
+
+
 .parralx-window {width: 100%;}
+
 .main {display: none;}
 
 body {
@@ -392,7 +397,6 @@ a, a:visited {text-decoration: none;}
 
 #competences {background-color: #f5f5f5;}
 
-
 .skillbar {
 	position:relative;
 	display:block;
@@ -614,9 +618,7 @@ a, a:visited {text-decoration: none;}
 	flex-wrap: wrap;
 }
 
-form {
-	width: 70%;
-}
+form {width: 70%;}
 
 #networks-content {
 	width: 30%;
@@ -688,6 +690,7 @@ textarea {
 	color: green;
 	margin: 10px 30px;
 }
+
 
 
 @media only screen and (max-width: 1000px) {
