--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,83 @@
+/* ================= */
+/* ===== Fonts ===== */
+/* ================= */
+
+/* New Fonts */
+@font-face {
+	font-family: "Dry Brush";
+	src: url("Font/Dry Brush.ttf");
+}
+
+@font-face {
+	font-family: "Giraffey";
+	src: url("Font/Giraffey.otf");
+}
+
+@font-face {
+	font-family: "Roboto";
+	src: url("Font/Roboto/Roboto-Regular.ttf");
+}
+
+@font-face {
+	font-family: "Roboto";
+	src: url("Font/Roboto/Roboto-Light.ttf");
+	font-weight: lighter;
+}
+
+@font-face {
+	font-family: "Roboto";
+	src: url("Font/Roboto/Roboto-Bold.ttf");
+	font-weight: bold;
+}
+
+/* Old fonts
+@font-face {
+	font-family: "Merienda";
+	src: url("Font/Merienda-Regular.ttf");
+}
+
+@font-face {
+	font-family: "Merienda";
+	src: url("Font/Merienda-Bold.ttf");
+	font-weight: bold;
+}
+
+@font-face {
+	font-family: "Signika";
+	src: url("Font/OldFonts/Signika-Regular.ttf");
+}
+
+@font-face {
+	font-family: "Signika";
+	src: url("Font/OldFonts/Signika-Light.ttf");
+	font-weight: lighter;
+}
+
+@font-face {
+	font-family: "Signika";
+	src: url("Font/OldFonts/Signika-Bold.ttf");
+	font-weight: bold;
+}*/
+
+
+
 /* ======================== */
 /* ===== Loading Page ===== */
 /* ======================== */
-
-
 
 .loader{
   width:100%;
   height:100%;
   text-align:center;
-  margin:0; 
+  margin:0;
   vertical-align:middle;
   display:block;
   margin-top:50vh;}
 
 .loader div{
-  width:10px; 
-  height:10px; 
-  border-radius:100%; 
+  width:10px;
+  height:10px;
+  border-radius:100%;
   background:#333;
   display:inline-block;
   vertical-align:center;
@@ -55,15 +116,12 @@
 /* ===== Main Page ===== */
 /* ===================== */
 
-
-
-
-.parralx-window {width: 100%;}
+.parallax-window {width: 100%;}
 
 .main {display: none;}
 
 body {
-	font-family: 'Signika', sans-serif;
+	font-family: 'Roboto';
 	margin: 0;
 }
 
@@ -76,8 +134,10 @@ body {
 img {max-width: 100%;}
 
 .title {
-	font-family: 'Signika', sans-serif;
-	font-size: 2.5rem;
+	font-family: 'Giraffey';
+	text-align: center;
+	font-size: 2.6rem;
+	letter-spacing: 6px;
 	margin: 0;
 	padding-top: 75px;
 	padding-left: 75px;
@@ -91,7 +151,7 @@ a, a:visited {text-decoration: none;}
 
 @media only screen and (max-width: 750px) {
 	.title {
-		font-family: 'Signika', sans-serif;
+		font-family: 'Giraffey', sans-serif;
 		font-size: 2.2rem;
 		padding: 50px 0;
 		color: #263238;
@@ -101,47 +161,9 @@ a, a:visited {text-decoration: none;}
 
 
 
-/* ================= */
-/* ===== Fonts ===== */
-/* ================= */
-
-
-
-@font-face {
-	font-family: "Merienda";
-	src: url("Font/Merienda-Regular.ttf");
-}
-
-@font-face {
-	font-family: "Merienda";
-	src: url("Font/Merienda-Bold.ttf");
-	font-weight: bold;
-}
-
-@font-face {
-	font-family: "Signika";
-	src: url("Font/Signika-Regular.ttf");
-}
-
-@font-face {
-	font-family: "Signika";
-	src: url("Font/Signika-Light.ttf");
-	font-weight: lighter;
-}
-
-@font-face {
-	font-family: "Signika";
-	src: url("Font/Signika-Bold.ttf");
-	font-weight: bold;
-}
-
-
-
 /* ===================== */
 /* ===== Hamburger ===== */
 /* ===================== */
-
-
 
 .c-hamburger {
   display: block;
@@ -189,11 +211,63 @@ a, a:visited {text-decoration: none;}
 
 
 
+/* =================== */
+/* ===== Buttons ===== */
+/* =================== */
+
+.parallax-btn-container {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+}
+
+.btn-container {
+	cursor: pointer;
+	margin: auto;
+	position: relative;
+	height: 46px;
+	border: 2px solid #455A64;
+}
+
+.btn-content {
+	margin: 0 35px;
+	margin-top: 8px;
+	height: 30px;
+}
+
+.btn {
+	line-height: 30px;
+	text-decoration: none;
+	font-size: 22px;
+	font-weight: 600;
+	color: #455A64;
+	transition: color 0.15s ease-out;
+}
+
+.underline {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 0px;
+	background-color: #455A64;
+	z-index: -1;
+	transition: height 0.15s ease-out;
+}
+
+.btn-hover-effect {
+	color: white;
+}
+
+.underline-hover-effect {
+	height: 100%;
+}
+
+
+
 /* ================== */
 /* ===== Page 1 ===== */
 /* ================== */
-
-
 
 #responsive-icon {display: none;}
 
@@ -219,9 +293,13 @@ a, a:visited {text-decoration: none;}
 .header-title-content {width: 40%;}
 
 .header-title {
-	font-family: 'Signika', sans-serif;
+	font-family: 'Roboto';
 	font-size: 2.2rem;
 	margin: 7px 20px;
+}
+
+.header-title-link {
+	color: white;
 }
 
 .base-menu-content {width: 60%;}
@@ -240,10 +318,11 @@ a, a:visited {text-decoration: none;}
 }
 
 .base-menu-link:link, .base-menu-link:visited {
-	font-family: 'Signika', sans-serif;
-	font-size: 1.2rem;
+	font-family: 'Roboto';
+	font-size: 1.3rem;
 	display: inline-block;
 	position: relative;
+	font-weight: lighter;
 	color: white;
 	text-decoration: none;
 	transition: all 0.3s ease;
@@ -284,28 +363,48 @@ a, a:visited {text-decoration: none;}
 }
 
 .responsive-menu-link {
-	font-family: 'Signika', sans-serif;
+	font-family: 'Giraffey', sans-serif;
 	font-size: 2rem;
 	color: white;
 }
 
-.parallax-title-content {
+.parallax-title-container {
 	display: flex;
-	flex-direction: column;
-	justify-content: center;	
-	text-align: center;
+	align-items: center;
 	min-height: 100vh;
 }
 
+.parallax-title-content {
+	width: 100%;
+}
 
 .parallax-title {
-	font-family: 'Merienda';
-	font-size: 2.8rem;
-	font-weight: bold;
+	width: 100%;
+	font-family: 'Dry Brush';
+	font-size: 6rem;
+	text-align: center;
+	text-transform: uppercase;
+	font-weight: normal;
 	margin: 0;
+	color: rgba(255,255,255,0.8);
+}
+
+.btn-container-for-parralax {
+	margin-top: 50px;
+	border: 2px solid rgba(255,255,255,0.8);
+}
+
+.parallax-btn {
 	color: white;
 }
 
+.parralax-underline {
+	background-color: rgba(255,255,255,0.8);
+}
+
+.parallax-btn-hover-effect {
+	color: #606A7F;
+}
 
 
 @media only screen and (max-width: 880px) {
@@ -323,7 +422,7 @@ a, a:visited {text-decoration: none;}
 		display: block;
 		width: 70px;
 		height: 70px;
-	}	
+	}
 
 	.base-menu-content {display: none;}
 
@@ -343,8 +442,6 @@ a, a:visited {text-decoration: none;}
 /* ================== */
 /* ===== Page 2 ===== */
 /* ================== */
-
-
 
 .main-information-content {
 	display: flex;
@@ -376,7 +473,6 @@ a, a:visited {text-decoration: none;}
 }
 
 
-
 @media only screen and (max-width: 850px) {
 
 	.main-information-content {display: block;}
@@ -393,9 +489,7 @@ a, a:visited {text-decoration: none;}
 /* ===== Page 3 ===== */
 /* ================== */
 
-
-
-#competences {background-color: #f5f5f5;}
+#competences {background-color: #FCFCFC;}
 
 .skillbar {
 	position:relative;
@@ -504,8 +598,6 @@ a, a:visited {text-decoration: none;}
 /* ===== Page 4 ===== */
 /* ================== */
 
-
-
 .projects-content {
 	display: flex;
 	flex-wrap: wrap;
@@ -590,7 +682,7 @@ a, a:visited {text-decoration: none;}
 		width: 100%;
 		margin: 0;
 	}
-	
+
 	.project-information {
 		width: 100%;
 		margin: 0;
@@ -604,9 +696,7 @@ a, a:visited {text-decoration: none;}
 /* ===== Page 5 ===== */
 /* ================== */
 
-
-
-#contact {background-color: #f5f5f5;}
+#contact {background-color: #FCFCFC;}
 
 #form-content {
 	display: flex;
@@ -668,7 +758,7 @@ textarea {
 }
 
 .network-link:visited {
-	text-decoration: none;	
+	text-decoration: none;
 }
 
 .network-img {
@@ -692,16 +782,15 @@ textarea {
 }
 
 
-
 @media only screen and (max-width: 1000px) {
-	
+
 	#form-content {display: block;}
 
 	form {
 		padding: 0;
 		width: 100%;
 	}
-	
+
 	.form-input {flex-direction: column;}
 
 	.label {width: 100%;}
