--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ body {
 }
 
 .section-content {
-	width: 75%;
+	width: 70%;
 	margin: auto;
 	padding-bottom: 50px;
 }
@@ -504,11 +504,14 @@ a, a:visited {text-decoration: none;}
 	border-radius: 10px;
 }
 
-.information-container {
+.information-and-links-container {
 	width: 60%;
 	position: absolute;
 	top: -25px;
 	left: 40%;
+}
+
+.information-container {
 	background-color: #FAFAFA;
 	border: solid 1px #EEEEEE;
 	box-shadow: 0 2px 10px rgba(0,0,0,0.15);
@@ -517,6 +520,7 @@ a, a:visited {text-decoration: none;}
 
 .information-content {
 	margin: auto;
+	position: relative;
 }
 
 /*.information-content {
@@ -528,8 +532,9 @@ a, a:visited {text-decoration: none;}
 }*/
 
 .information-txt {
-	margin: 35px;
-	margin-bottom: 45px;
+	margin: 0;
+	padding: 35px;
+	padding-bottom: 45px;
 	font-size: 18px;
 	text-align: justify;
 	color: black;
@@ -537,7 +542,7 @@ a, a:visited {text-decoration: none;}
 
 .information-triangle {
 	position: absolute;
-	left: -30px;
+	left: -29px;
 	top: 0;
 	bottom: 0;
 	right: 100%;
@@ -546,7 +551,8 @@ a, a:visited {text-decoration: none;}
 	margin: auto;
 	border-style: solid;
 	border-width: 30px 30px 30px 0;
-	border-color: transparent white transparent transparent;
+	border-color: transparent #FAFAFA transparent transparent;
+	z-index: 999;
 }
 
 .information-center-btn-container {
@@ -561,11 +567,11 @@ a, a:visited {text-decoration: none;}
 }
 
 .networks-container {
-	position: absolute;
+	/*position: absolute;
 	bottom: 0;
 	left: 45%;
 	width: 45%;
-	height: 30%;
+	height: 30%;*/
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
@@ -580,7 +586,7 @@ a, a:visited {text-decoration: none;}
 .network-link {
 	font-size: 18px;
 	color: black;
-	margin-left: 10px; 
+	margin-left: 10px;
 	text-decoration: none;
 }
 
