--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+/* ===== RESPONSIVE SIZES ===== */
+/* Mobile S : 320px */
+/* Mobile M : 375px */
+/* Mobile L : 425px */
+/* Tablet 	: 768px */
+/* Laptop 	: 1024px */
+
+
+
 /* ================= */
 /* ===== Fonts ===== */
 /* ================= */
@@ -126,7 +135,7 @@ body {
 }
 
 .section-content {
-	width: 70%;
+	width: 65%;
 	margin: auto;
 	padding-bottom: 50px;
 }
@@ -148,13 +157,19 @@ a, a:visited {text-decoration: none;}
 
 
 
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 425px) {
 	.title {
 		font-family: 'Giraffey', sans-serif;
 		font-size: 2.2rem;
 		padding: 50px 0 35px 0;
 		color: #263238;
 		text-align: center;
+	}
+
+	.section-content {
+		width: 80%;
+		margin: auto;
+		padding-bottom: 50px;
 	}
 }
 
@@ -256,7 +271,7 @@ a, a:visited {text-decoration: none;}
 }
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 425px) {
 	.btn-container {
 		cursor: pointer;
 		margin: auto;
@@ -284,9 +299,9 @@ a, a:visited {text-decoration: none;}
 
 
 
-/* ================== */
-/* ===== Page 1 ===== */
-/* ================== */
+/* ============================ */
+/* ===== Page 1 #Parallax ===== */
+/* ============================ */
 
 #responsive-icon {display: none;}
 
@@ -426,7 +441,7 @@ a, a:visited {text-decoration: none;}
 }
 
 
-@media only screen and (max-width: 950px) {
+@media only screen and (max-width: 768px) {
 
 	.header-content {
 		display: block;
@@ -460,7 +475,8 @@ a, a:visited {text-decoration: none;}
 	}
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 425px) {
+
 	.parallax-title {
 		font-size: 2.9rem;
 		line-height: 55px;
@@ -469,30 +485,13 @@ a, a:visited {text-decoration: none;}
 
 
 
-/* ================== */
-/* ===== Page 2 ===== */
-/* ================== */
-
-/*.main-information-content {
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-}*/
+/* ================================ */
+/* ===== Page 2 #Presentation ===== */
+/* ================================ */
 
 .main-information-content {
 	position: relative;
 }
-
-/*.Loric-img-content {
-	width: 45%;
-}
-
-.Loric-img {
-	display: block;
-	width: 75%;
-	border-radius: 50%;
-	margin: auto;
-}*/
 
 .presentation-img-content {
 	width: 45%;
@@ -523,14 +522,6 @@ a, a:visited {text-decoration: none;}
 	position: relative;
 }
 
-/*.information-content {
-	margin: auto;
-	background-color: #ECEFF1;
-	border-radius: 5px;
-	border: 1px solid #ECEFF1;
-	position: relative;
-}*/
-
 .information-txt {
 	margin: 0;
 	padding: 35px;
@@ -552,7 +543,7 @@ a, a:visited {text-decoration: none;}
 	border-style: solid;
 	border-width: 30px 30px 30px 0;
 	border-color: transparent #FAFAFA transparent transparent;
-	z-index: 999;
+	z-index: 500;
 }
 
 .information-center-btn-container {
@@ -563,34 +554,23 @@ a, a:visited {text-decoration: none;}
 .information-btn-container {
 	background-color: white;
 	box-shadow: 0 2px 10px rgba(0,0,0,0.15);
-	/*border: 2px solid #53636E;*/
 }
 
 .networks-container {
-	/*position: absolute;
-	bottom: 0;
-	left: 45%;
-	width: 45%;
-	height: 30%;*/
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
-	margin: 0 5%;
+	margin-top: 20%;
 }
 
 .network {
 	display: flex;
 	align-items: center;
+	width: 120px;
+	margin: 15px auto;
 }
 
 .network-link {
-	font-size: 18px;
+	font-size: 20px;
 	color: black;
-	margin-left: 10px;
-	text-decoration: none;
-}
-
-.network-link:visited {
+	margin-left: 15px;
 	text-decoration: none;
 }
 
@@ -616,86 +596,75 @@ a, a:visited {text-decoration: none;}
 }
 
 
-@media only screen and (max-width: 950px) {
+@media only screen and (max-width: 1024px) {
 
-	.main-information-content {display: block;}
-
-	.Loric-img-content {
-		width: 70%;
-		margin: auto;
+	.information-txt {
+		font-size: 16px;
 	}
 
-	.information-container {
+	.networks-container {
+		margin-top: 10%;
+	}
+}
+
+
+@media only screen and (max-width: 768px) {
+
+	.main-information-content {position: initial;}
+
+	.presentation-img-content {
+		width: 70%;
+		margin: 0 auto;
+	}
+
+	.information-and-links-container {
 		width: 100%;
-		margin-top: 40px;
+		position: initial;
 	}
 
 	.information-txt {
-		margin: 16px;
-		margin-bottom: 40px;
+		padding: 16px;
+		padding-bottom: 40px;
 	}
 
 	.information-triangle {
 		position: absolute;
 		left: 0;
-		top: -30px;
-		bottom: 100%;
+		top: -29px;
 		right: 0;
 		width: 0;
 		height: 0;
 		margin: 0 auto;
 		border-style: solid;
 		border-width: 0 30px 30px 30px;
-		border-color: transparent transparent #ECEFF1 transparent;
+		border-color: transparent transparent #FAFAFA transparent;
 	}
+
+	.networks-container {display: flex;}
 }
 
-@media only screen and (max-width: 600px) {
 
-	.main-information-content {display: block;}
+@media only screen and (max-width: 425px) {
 
-	.Loric-img-content {
+	.presentation-img-content {
 		width: 90%;
-		margin: auto;
-	}
-
-	.information-container {
-		width: 100%;
-		margin-top: 30px;
-	}
-
-	.information-txt {
-		margin: 16px;
-		margin-bottom: 40px;
-		font-size: 15px;
-		text-align: initial;
-	}
-
-	.information-triangle {
-		position: absolute;
-		left: 0;
-		top: -20px;
-		bottom: 100%;
-		right: 0;
-		width: 0;
-		height: 0;
-		margin: 0 auto;
-		border-style: solid;
-		border-width: 0 20px 20px 20px;
-		border-color: transparent transparent #ECEFF1 transparent;
 	}
 
 	.information-center-btn-container {
 		bottom: -21px;
 	}
 
+	.network {width: 100px;}
+
+	.network-link {font-size: 18px;}
+
 }
 
 
 
-/* ================== */
-/* ===== Page 3 ===== */
-/* ================== */
+/* ========================== */
+/* ===== Page 3 #Skills ===== */
+/* ========================== */
 
 #competences {background-color: #FCFCFC;}
 
@@ -802,9 +771,9 @@ a, a:visited {text-decoration: none;}
 
 
 
-/* ================== */
-/* ===== Page 4 ===== */
-/* ================== */
+/* ============================ */
+/* ===== Page 4 #Projects ===== */
+/* ============================ */
 
 .projects-content {
 	display: flex;
@@ -868,7 +837,7 @@ a, a:visited {text-decoration: none;}
 .project-screenshot {border: solid 1px #455a64;}
 
 
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 768px) {
 
 	.project-title {
 		width: 100%;
@@ -900,9 +869,9 @@ a, a:visited {text-decoration: none;}
 
 
 
-/* ================== */
-/* ===== Page 5 ===== */
-/* ================== */
+/* =========================== */
+/* ===== Page 5 #Contact ===== */
+/* =========================== */
 
 #contact {background-color: #FCFCFC;}
 
@@ -988,7 +957,7 @@ textarea {
 }
 
 
-@media only screen and (max-width: 950px) {
+@media only screen and (max-width: 768px) {
 
 	#form-content {display: block;}
 
