--- a/css/style.css
+++ b/css/style.css
@@ -240,12 +240,12 @@ a, a:visited {text-decoration: none;}
 	margin: auto;
 	position: relative;
 	height: 46px;
-	border: 2px solid #53636E;
+	border: 2px solid #5D6E7B;
 	z-index: 500;
 }
 
 .btn-content {
-	margin: 0 35px;
+	margin: 0 30px;
 	margin-top: 8px;
 	height: 30px;
 }
@@ -253,7 +253,7 @@ a, a:visited {text-decoration: none;}
 .btn {
 	line-height: 30px;
 	text-decoration: none;
-	font-size: 22px;
+	font-size: 20px;
 	font-weight: 600;
 	color: #53636E;
 	transition: color 0.15s ease-out;
@@ -265,7 +265,7 @@ a, a:visited {text-decoration: none;}
 	left: 0;
 	right: 0;
 	height: 0px;
-	background-color: #53636E;
+	background-color: #5D6E7B;
 	z-index: -1;
 	transition: height 0.15s ease-out;
 }
@@ -494,6 +494,7 @@ a, a:visited {text-decoration: none;}
 }
 
 .presentation-img-content {
+	opacity: 0;
 	width: 45%;
 	margin-top: 25px;
 }
@@ -504,6 +505,7 @@ a, a:visited {text-decoration: none;}
 }
 
 .information-and-links-container {
+	opacity: 0;
 	width: 60%;
 	position: absolute;
 	top: -25px;
@@ -656,7 +658,7 @@ a, a:visited {text-decoration: none;}
 
 	.network {width: 100px;}
 
-	.network-link {font-size: 18px;}
+	.network-link {font-size: 16px;}
 
 }
 
@@ -783,7 +785,7 @@ a, a:visited {text-decoration: none;}
 .project-img-content {
 	width: 20%;
 	height: 20%;
-	margin: 2.2%;
+	margin: calc(20% /8);
 	opacity: 0;
 	transition: opacity 0.6s;
 	cursor: pointer;
@@ -850,7 +852,7 @@ a, a:visited {text-decoration: none;}
 	.project-img-content {
 		width: 40%;
 		height: 40%;
-		margin: 2.5%;
+		margin: calc(20% /4);
 	}
 
 	.project {display: block;}
@@ -876,7 +878,8 @@ a, a:visited {text-decoration: none;}
 #contact {background-color: #FCFCFC;}
 
 .contact-container {
-	width: 60%;
+	opacity: 0;
+	width: 75%;
 	margin: auto;
 }
 
@@ -884,23 +887,8 @@ a, a:visited {text-decoration: none;}
 	width: 100%;
 }
 
-#networks-content {
-	width: 30%;
-	opacity: 0;
-	transition: opacity 0.6s;
-}
-
 .form-input {
 	margin: 10px 0;
-}
-
-.label {
-	width: 20%;
-	float: left;
-	color: #263238;
-	font-weight: bold;
-	opacity: 0;
-	transition: opacity 0.6s;
 }
 
 .input {
@@ -908,15 +896,6 @@ a, a:visited {text-decoration: none;}
 	font-size: 16px;
 	width: calc(100% - 44px);
 	padding: 10px 20px;
-	opacity: 0;
-	transition: opacity 0.6s;
-}
-
-#labelArea {
-	color: #263238;
-	font-weight: bold;
-	opacity: 0;
-	transition: opacity 0.6s;
 }
 
 textarea {
@@ -925,11 +904,6 @@ textarea {
 	width: calc(100% - 44px);
 	resize: none;
 	padding: 10px 20px;
-}
-
-#area {
-	opacity: 0;
-	transition: opacity 0.6s;
 }
 
 .contact-center-btn-container {
@@ -941,10 +915,13 @@ textarea {
 	margin: 0;
 }
 
-#submit {
-	opacity: 0;
-	transition: opacity 0.6s;
+.submit {
+	background-color: transparent;
+	border: none;
+	cursor: pointer;
 }
+
+.submit:focus {outline:0;}
 
 .error {
 	color: red;
@@ -959,18 +936,9 @@ textarea {
 
 @media only screen and (max-width: 768px) {
 
-	#form-content {display: block;}
-
-	form {
-		padding: 0;
+	.contact-container {
 		width: 100%;
 	}
-
-	.form-input {flex-direction: column;}
-
-	.label {width: 100%;}
-
-	.input {width: 100%;}
 }
 
 
