V3 - Some changes + compressed images

--- a/css/style.css
+++ b/css/style.css
@@ -576,6 +576,21 @@ a, a:visited {text-decoration: none;}
 	text-decoration: none;
 }
 
+.network-link:after {
+	content: '';
+	display: block;
+	margin: auto;
+	height: 1px;
+	width: 0px;
+	background: transparent;
+	transition: width .5s ease, background-color .5s ease;
+}
+
+.network-link:hover:after {
+	width: 100%;
+	background: black;
+}
+
 .network-img {
 	width: 30px;
 	height: 30px;
